Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17569

Qt Creator doesn't show OBJECTIVE_HEADERS files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 4.10.0-beta1
    • Qt Creator 4.2.0
    • Qt Creator 4.2.0 with Qt 5.7.1 and 5.8RC, macOS 10.12.2, Xcode 8.2.1
    • cd8ebb21e3445dd1b02f3401cd3c223e14c45c26 (qt-creator/qt-creator/4.10)

    Description

      I don't see any of my OBJECTIVE_HEADERS files in Project view.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-17569
          # Subject Branch Project Status CR V

          Activity

            People

              kandeler Christian Kandeler
              maciejweglarczyk Maciej Węglarczyk
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes