QmakeProjectManager: Make sure OBJECTIVE_HEADERS appear in project tree

We do not introduce another category, but list them under "Headers", as
we do with PRECOMPILED_HEADER entries.

Fixes: QTCREATORBUG-17569
Change-Id: Ie0e6efdd09715daf2802b126a4ecbdc20b25d008
Reviewed-by: Eike Ziller <eike.ziller@qt.io>